# flask-restx-docker-todo

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
todo/: app.py
todo/api/: __init__.py  namespaces.py
todo/api/models/: todos.py
todo/api/resources/: todos.py
