[tool.poetry]
name = "todo"
version = "0.1.0"
description = "An example of how to spin up Flask, Restx and Docker."
authors = ["Josh Finnie <josh@jfin.us>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
flask-restx = "^0.5.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
